# maudy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/ci_aord_nosyn/: config.toml  experiments.toml  ferredoxin.txt  kinetic.toml
examples/ci_aord_quench/: README.md  dgf_priors_equilibrator.toml  dgf_priors_equilibrator_ph6d0.toml  kinetic.toml  maudy.toml  priors.toml
examples/ci_aord_syngas/: config.toml  experiments.toml  maudy.toml  priors.toml
examples/example_ode/: kinetic_model.toml  priors.toml
examples/example_ode_allos/: kinetic_model.toml  maudy.toml  priors.toml
examples/linear/: experiments.toml  maudy.toml  priors.toml
maudy/: analysis.py  black_box.py  cli.py  constants.py  io.py  kinetics.py  model.py  oos.py  train.py
notebooks/: anamaudy_actual_vae.ipynb  anamaudy_cauto_oos_quench.ipynb
tests/: conftest.py  test_analysis.py  test_model.py
