[project]
name = "maudy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "carrascomj", email = "carrascomurielj@gmail.com" }
]
dependencies = [
    "torch>=2.3.0",
    "maud-metabolic-models>=0.7.1.0",
    "pyro-ppl>=1.9.1",
    "typer>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["maudy"]

[tool.hatch.build.targets.wheel]
packages = ["maudy"]

[project.scripts]
maudy = "maudy.cli:main"
